wallet area populated

--- a/CryptoAddress/CryptoAddress.Android/CryptoAddress.Android.csproj
+++ b/CryptoAddress/CryptoAddress.Android/CryptoAddress.Android.csproj
@@ -91,14 +91,15 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\CryptoAddress\CryptoAddress.csproj">
       <Project>{591DC563-D203-4B2D-B864-47E601476B11}</Project>
       <Name>CryptoAddress</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\btc.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
