--- a/CryptoAddress/CryptoAddress/CryptoAddress.csproj
+++ b/CryptoAddress/CryptoAddress/CryptoAddress.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
+    <PackageReference Include="System.Text.Json" Version="4.6.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.848062" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
