--- a/CryptoAddress/CryptoAddress.Android/CryptoAddress.Android.csproj
+++ b/CryptoAddress/CryptoAddress.Android/CryptoAddress.Android.csproj
@@ -103,5 +103,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\btc.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ltc.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\xmr.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\xrp.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
